--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.username=user
 spring.datasource.password=pass
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.yaml
