--- a/src/main/resources/db/changelog/changelog-master.yaml
+++ b/src/main/resources/db/changelog/changelog-master.yaml
@@ -1,3 +1,6 @@
 databaseChangeLog:
     - include:
           file: db/changelog/v1/scheme.sql
+
+    - include:
+        file: db/changelog/v1/data.sql
