--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.thymeleaf.prefix=file:src/main/resources/templates/
 spring.web.resources.static-locations=file:src/main/resources/static/
 spring.web.resources.cache.period=0
 
+telegram.bot.name=LibCoffeshopbot
+telegram.bot.token=7523578318:AAETDrjBoVOu5WcrgB7-iMbLWHw8JNY0MRA
+
