--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,21 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/coffeshop_db
-spring.datasource.username=user
-spring.datasource.password=pass
+server.port=8080
+spring.application.name=CoffeeLib
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.yaml
 
-
-spring.thymeleaf.cache=false
-spring.thymeleaf.mode=HTML
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.prefix=file:src/main/resources/templates/
-spring.web.resources.static-locations=file:src/main/resources/static/
-spring.web.resources.cache.period=0
+#
+#spring.thymeleaf.cache=false
+#spring.thymeleaf.mode=HTML
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.prefix=file:src/main/resources/templates/
+#spring.web.resources.static-locations=file:src/main/resources/static/
+#spring.web.resources.cache.period=0
 
 telegram.bot.name=LibCoffeshopbot
-telegram.bot.token=7523578318:AAETDrjBoVOu5WcrgB7-iMbLWHw8JNY0MRA
+telegram.bot.token=${TG_TOKEN}
 
